# Pandas_Wrapper

./: LICENCE.txt  MANIFEST.in  README.md  all_uses  class_demo.py  dataframe_vis.py  main.py  setup.cfg  setup.py  test.html  tests.py  web_client.py
Licenses/: NUMPY-LICENSE.txt  PANDAS-LICENSE.txt
src/: constants.py  dataframe_vis.py  life_time_stats_client.py  main.py  web_client.py
src/Pandas_Wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Pandas_Wrapper_Gal_Tch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/Pandas_Wrapper_pcg/: constants.py  dataframe_vis.py  web_client.py
src/Pandas_Wrapper_pcg/client/: index.html  styles.css
src/client/: index.html
src/data/: business-operations-survey-2020-covid-19-csv.csv
tests/: test.html  tests.py
