[metadata]
# replace with your username:
name = Pandas_Wrapper-Gal-Tch
version = 0.1.8
author = Gal-Tch
author_email = author@example.com
description = A wrapper to the pandas package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gal-Tch/Pandas_Wrapper.git
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src