[metadata]
name = Pandas_Wrapper
version = 0.0.2
author = Alon Shevach, Gal Tchinio, Guy Sudri, Tamir Or.
author_email = alon.shevach1@gmail.com
description = A wrapper to the pandas package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gal-Tch/Pandas_Wrapper.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src